--- a/App/Catnip/mobile/src/main/res/values/strings.xml
+++ b/App/Catnip/mobile/src/main/res/values/strings.xml
@@ -4,8 +4,7 @@
     <string name="app_name">Represent</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
     <string name="title_activity_details">Details</string>
-    <string name="title_activity_listing">Listing</string>
+    <string name="title_activity_listing">Local Representatives</string>
     <string name="title_activity_main2">Main2Activity</string>
-    <string name="title_activity_main22">Main22Activity</string>
     <string name="title_activity_main3">Main3Activity</string>
 </resources>
